# crds

./: .gitignore  .project  .pydevproject  .pylintrc  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README  README.rst  TESTING  _runtests  changelog.yml  clean  conftest.py  crds-0bef02a5-796f-4fad-af47-2f1200c2ece9.fits  crds-73af51ac-9d8e-40a3-8006-6d814ae3ad90.fits  crds_setup_all  crds_setup_crds  crds_setup_env  dummy.txt  env.csh  environment.yml  hst_acs_pfltfile2.rmap  install  install3  jde_forceci.txt  pyproject.toml  requirements-dev-numpy.txt  retest  runtests  runtests3  save_version  setup.cfg  setup.py  setup_data.py  setup_test_cache  setup_test_data.py  test  test_roman.py  (+2 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  cache.yml  cancel_duplicate_workflows.yml  changelog.yml  ci.yml  contexts.yml  release.yml
changes/: 1077.general.rst  1078.general.rst  1080.doc.rst  1088.general.rst  1089.general.rst  1091.testing.rst  1097.roman.rst  1098.jwst.rst  1099.jwst.rst  1100.jwst.rst  1102.jwst.rst  1104.roman.rst  1105.hst.rst  1106.jwst.rst  1107.jwst.rst  1108.roman.rst  1109.general.rst  1110.testing.rst  1114.jwst.1.rst  1114.jwst.rst  1119.roman.rst  1120.jwst.rst  1121.hst.rst  1122.jwst.rst  1124.roman.rst  1128.roman.rst  1131.roman.rst  1132.jwst.rst  1133.roman.rst  1134.jwst.rst  1135.jwst.rst  1136.jwst.rst  1139.jwst.rst  1140.jwst.rst  1145.jwst.rst  1146.hst.rst  1152.aws.rst  1153.jwst.rst  1154.roman.rst  1155.general.rst  (+35 more)
ci-helpers/travis/: setup_conda_osx.sh  setup_dependencies_common.sh
client/: __init__.py  api.py  list.py  proxy.py  setup.py  sync.py
crds/: __init__.py  __init__.py~  background.py  bestrefs.py  certify.py  check_archive.py  checksum.py  cmdline.py  compat.py  config.py  custom_dict.py  data_file.py  datalvl.py  diff.py  exceptions.py  git_version.py  heavy_client.py  list.py  log.py  mapping_parser.py  mapping_verifier.py  matches.py  monitor.py  naming.py  newcontext.py  pysh.py  python23.py  python3.py  query_affected.py  refactor.py  refactor2.py  reftypes.py  rmap.py  rowdiff.py  selectors.py  sql.py  submit.py  substitutions.py  svn_version.py  sync.py  (+7 more)
crds/bestrefs/: __init__.py  __main__.py  bestrefs.py  headers.py  stale.py  stale_epilog.txt  table_effects.py
crds/certify/: README  __init__.py  __main__.py  certify.py  check_rmap_update.py  check_sha1sum.py  generic_tpn.py  mapping_parser.py  reftypes.py  validator.py  validator_helpers.py  validators.py
docs/: Affected_Datasets_Demo.pptx  CRDS_Interface_B5.docx  CRDS_Interface_B6.docx  CRDS_Interface_B7.docx  CRDS_System.dia  CRDS_System_diffs.dia  CRDS_pipeline_interface-lmt-4.docx  CRDS_pipeline_interface-lmt-5.docx  CRDS_remote_sites.odt  CRDSforACM.ppt  CRDSforHST.ppt  CRDSforINS.ppt  CRDSforJPWG.ppt  CRDSforJPWG2.ppt  DMS_Reqs_Doc.docx  DMS_SDR1_09_CRDS.pptx  DMS_SDR2_09_CRDS_dryrun.pptx  DMS_SDR2_09_CRDS_final.pptx  DMS_SDR2_10_CRDS.pptx  HST_Upgrade_Reqs_Metrics_03-18-13-edit.xlsx  JWST-CRDS-DMS.docx  JWST_DMS_Level_4_Requirements-2015-07-29-modified.xlsx  JWST_DMS_Level_4_Requirements-2015-07-29.xlsx  JWST_Web_Service_Design_Slides.odp  JWST_Web_Services.dia  JWST_Web_Services.eps  Procedure_for_Routine_Reference_Submissions.docx  crds_plan.txt  data_flow.odg  error_analysis.txt  getrefererences.dia  hst_acs_pfltfile2.rmap  install.rst  mapping_examples.txt  new_type_form.rst  phase2-tables.tcl  phase2-tables.xml  reprocessing_comparison_table.ods  requirements  runjwst.txt  (+1 more)
documentation/: CRDS_remote_sites.odt  README.rst  certify_design.html  certify_design.rst
envs/: crds-readonly.csh  crds-tests.csh  crds-tests.sh  env-forwarded.csh  env-local.csh  hst-crds-builtin-cache.csh  hst-crds-dev.csh  hst-crds-dev.sh  hst-crds-ops.csh  hst-crds-ops.sh  hst-crds-readonly.csh  hst-crds-readonly.sh  hst-crds-test.csh  hst-crds-test.sh  hst-runtests.csh  hst-serverless.csh  jwst-crds-aws.sh  jwst-crds-b5it.csh  jwst-crds-b6it.csh  jwst-crds-bit.csh  jwst-crds-bit.sh  jwst-crds-builtin-cache.csh  jwst-crds-cit.csh  jwst-crds-cit.sh  jwst-crds-dev.csh  jwst-crds-dev.sh  jwst-crds-dit.csh  jwst-crds-dit.sh  jwst-crds-ops.csh  jwst-crds-ops.sh  jwst-crds-readonly.csh  jwst-crds-readonly.sh  jwst-crds-test.csh  jwst-crds-test.sh  jwst-serverless.csh  roman-crds-dev.csh  roman-crds-dev.sh  roman-crds-int.csh  roman-crds-int.sh  roman-crds-ops.csh  (+8 more)
hst/: __init__.py  acs.py  certify.py  certify_all  geis.py  hst.pmap  locate.py  locate_refs.py  parkeys.py  regen  setup.py  siname.py  substitutions.py  text_descr.py  tpn.py  update_cache  wfc3.py
jwst/: __init__.py  locate.py  setup.py  tpn.py
lib/: __init__.py  bestrefs.py  certify.py  checksum.py  cmdline.py  collections2.py  compat.py  config.py  data_file.py  diff.py  ezxml.py  file_bestrefs.py  geis.py  heavy_client.py  list.py  log.py  mapping_parser.py  matches.py  newcontext.py  parse.new  parse.py  pylint.rc  pysh.py  recalibrate.py  refactor.py  reference_file.py  refmatch.py  rewrite_hash.py  rmap.new  rmap.py  selectors.py  setup.py  svn_version.py  sync.py  timestamp.py  uses.py  utils.py  validate.py
release_scripts/: insert_next_release  set_release_date
scripts/: crds  crds_cached_context  crds_catalog_capture  crds_check_cache  crds_dataset_capture  crds_instrument_iter  crds_json_regress  crds_jwst_serverless_pipeline_env.csh  crds_jwst_serverless_pipeline_env.sh  crds_parkey_tool  crds_repair_cache  crds_s3_get  crds_s3_set  crds_s3_unset  crds_sync_env  crds_unique  cron_sync  custom_query_affected_datasets  pipeline_bestref  query_affected_datasets  remote_cache_init  safe_bestrefs  safe_sync  unsafe_sync
test/: __init__.py  _version.py  conftest.py  dms_requirement_tests.json  list.py  matches.py  pytest.ini  rowdiff.py  sync.py  test_bad_files.py  test_build6.py  test_diff.py  test_dms_requirements.py  test_list.py  test_matches.py  test_requirements.py  test_rowdiff.py  test_sync.py  test_uses.py
test_data/: broken.rmap  check_files.py  new_files  refactor_test.py  refactor_to_sumbit
tobs/: locate.py  tests.py  tpn.py
(+3991 files in other folders)
