[project]
name = "crds"
description = "Calibration Reference Data System,  HST/JWST/Roman reference file management"
authors = [{ name = "STScI CRDS s/w developers" }]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "astropy",
  "numpy",
  "filelock",
  "asdf != 3.0.0",
  "requests",
  "parsley",
]
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.license]
file = "LICENSE"
content-type = "text/plain"

[project.urls]
homepage = "https://github.com/spacetelescope/crds"

[project.optional-dependencies]
jwst = ["jwst"]
roman = ["roman_datamodels"]
submission = ["requests", "parsley"]
dev = ["ipython", "jupyterlab", "ansible", "helm"]
test = [
  "lockfile",
  "mock",
  "pylint",
  "flake8",
  "bandit",
  "metrics-logger",
  "pytest >= 6.0",
  "pytest-astropy",
  "pytest-doctestplus>=0.10.0",
  "pytest-cov",
  "pytest-profiling",
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "docutils",
  "sphinx_automodapi",
  "sphinx-tabs",
]
aws = ["boto3", "awscli"]
synphot = ["stsynphot", "pysynphot"]

[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux", "OS-X"]
zip-safe = false
packages = [
  "crds",
  "crds.bestrefs",
  "crds.certify",
  "crds.certify.validators",
  "crds.client",
  "crds.core",
  "crds.io",
  "crds.submit",
  "crds.misc",
  "crds.misc.synphot",
  "crds.refactoring",
  "crds.hst",
  "crds.jwst",
  "crds.tobs",
  "crds.roman",
]
include-package-data = false

[tool.setuptools.package-dir]
crds = "crds"
"crds.bestrefs" = "crds/bestrefs"
"crds.certify" = "crds/certify"
"crds.certify.validators" = "crds/certify/validators"
"crds.client" = "crds/client"
"crds.core" = "crds/core"
"crds.io" = "crds/io"
"crds.submit" = "crds/submit"
"crds.misc" = "crds/misc"
"crds.misc.synphot" = "crds/misc/synphot"
"crds.refactoring" = "crds/refactoring"
"crds.hst" = "crds/hst"
"crds.jwst" = "crds/jwst"
"crds.roman" = "crds/roman"
"crds.tobs" = "crds/tobs"


[tool.setuptools.package-data]
"crds.hst" = [
  "*.dat",
  "*.yaml",
  "*.json",
  "tpns/*.tpn",
  "tpns/includes/*.tpn",
  "specs/*.spec",
  "specs/*.rmap",
  "specs/*.json",
]
"crds.jwst" = [
  "*.dat",
  "*.yaml",
  "*.json",
  "tpns/*.tpn",
  "tpns/includes/*.tpn",
  "specs/*.spec",
  "specs/*.rmap",
  "specs/*.json",
]
"crds.roman" = [
  "*.dat",
  "*.yaml",
  "*.json",
  "tpns/*.tpn",
  "tpns/includes/*.tpn",
  "specs/*.spec",
  "specs/*.rmap",
  "specs/*.json",
]
"crds.tobs" = [
  "*.dat",
  "*.yaml",
  "*.json",
  "tpns/*.tpn",
  "tpns/includes/*.tpn",
  "specs/*.spec",
  "specs/*.rmap",
  "specs/*.json",
]

[tool.pytest.ini_options]
python_files = ["test_*"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "smoke: critical tests required to pass for the system to work.",
  "asdf: asdf related tests",
  "bad_files",
  "bestrefs",
  "build6",
  "certify",
  "checksum",
  "cmdline",
  "core: tests in the crds.core module",
  "distortion: all tests related to distortion filetype",
  "diff",
  "factory",
  "heavy_client",
  "hst",
  "io",
  "jwst",
  "list",
  "locking",
  "matches",
  "misc",
  "multimission",
  "newcontext",
  "or_bars",
  "refactor",
  "refactoring: tests in the crds.refactoring module",
  "reftypes",
  "rmap",
  "roman: all tests specific to the ROMAN Space Telescope mission",
  "rowdiff",
  "selectors",
  "special",
  "submit",
  "substitutions",
  "sync",
  "synphot",
  "tables",
  "table_effects",
  "uniqname",
  "uses",
]

[tool.setuptools_scm]
write_to = "crds/_version.py"
