
[metadata]
name = crds
platform = Linux, OS-X
homepage = https://github.com/spacetelescope/crds
license = BSD

[nosetests]
verbosity=2
detailed-errors=1
# with-coverage=1
# cover-erase=1
# cover-branches=1
# cover-package=application
# cover-html=1
# cover-html-dir=htmlcov
where=crds
with-doctest=1
doctest-tests=1
doctest-options=+ELLIPSIS,+NORMALIZE_WHITESPACE,+IGNORE_EXCEPTION_DETAIL
logging-clear-handlers=1
